fix(01-02): use specific port in devAllowedDomains

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -8,6 +8,6 @@
   "networkAccess": {
     "allowedDomains": ["http://localhost:8000"],
     "reasoning": "Connect to local Python backend for AI design review",
-    "devAllowedDomains": ["http://localhost:*", "http://127.0.0.1:*"]
+    "devAllowedDomains": ["http://localhost:8000", "http://127.0.0.1:8000"]
   }
 }
