--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -7,7 +7,6 @@
   "editorType": ["figma"],
   "networkAccess": {
     "allowedDomains": ["http://localhost:8000"],
-    "reasoning": "Connect to local Python backend for AI design review",
-    "devAllowedDomains": ["http://localhost:8000", "http://127.0.0.1:8000"]
+    "reasoning": "Connect to local Python backend for AI design review"
   }
 }
